# OTUS-Cpp-basics-HW-8

./: CMakeLists.txt  README.md  main.cpp
include/: mtq.h
src/: mtq.ipp
